--- a/spec/unit/templates/domain_all_settings.xml
+++ b/spec/unit/templates/domain_all_settings.xml
@@ -32,17 +32,17 @@
   <devices>
     <emulator>/usr/bin/kvm-spice</emulator>
     <disk type='file' device='disk'>
-      <driver name='qemu' type='qcow2' cache='unsafe'/>
+      <driver name='qemu' type='qcow2' cache='unsafe' discard='ignore'/>
       <source file='/var/lib/libvirt/images/test.qcow2'/>
       <target dev='vda' bus='ide'/>
     </disk>
     <disk type='file' device='disk'>
-      <driver name='qemu' type='qcow2' cache='default'/>
+      <driver name='qemu' type='qcow2' cache='default' discard='ignore'/>
       <source file='/var/lib/libvirt/images/test-disk1.qcow2'/>
       <target dev='vdb' bus='virtio'/>
     </disk>
     <disk type='file' device='disk'>
-      <driver name='qemu' type='qcow2' cache='default'/>
+      <driver name='qemu' type='qcow2' cache='default' discard='ignore'/>
       <source file='/var/lib/libvirt/images/test-disk2.qcow2'/>
       <target dev='vdc' bus='virtio'/>
     </disk>
